# Edge_openCV_viewer

./: Readme.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/opencvintegrate/: ImageConverter.java  MainActivity.java  MyGLRenderer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
web/web-viewer/: PROJECT-SUMMARY.md  README-WEBVIEWER.md  USAGE-GUIDE.md  index.html  package-lock.json  package.json
web/web-viewer/src/: App.css  App.tsx  index.css
